--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ header nav {height: 100%;}
 header nav a.logo {padding:0px; position:fixed; left:20px; top:5px;}
 header nav a {font-size: 14px; padding:19px 16px; text-transform: uppercase; float: left; border-right: 3px solid transparent; border-bottom: 4px solid transparent; border-radius: 0px 50px;}
 header nav a:hover {background: #00a4d9; color: #f1683a; color: #fff; border-right: solid 3px #fff; border-bottom: solid 4px #fff; border-radius: 0px 50px; transition: 0.5s linear;}
+header nav div.m-navigatior {display: none;}
 section {width: 100%; height: 100vh;}
 .carousel {width: calc(100vw - 17px); height: 100vh; overflow: hidden; margin-top:0px; position: relative;}
 .carousel .list .item {position: absolute; inset:0 0 0 0;}
@@ -138,19 +139,38 @@ section.contact .right .social-icon i:hover {color: #00a4d9; cursor: pointer;}
 /* Responsive CSS */
 
 @media(max-width:780px) {
-    header {height: 100%; height:60px; overflow: hidden;}
-    header nav a.logo {position: relative; left: 0px; top:10px}
-    header nav a {width: 100%; text-align: center; padding:19px 0px;}
-    .carousel .list .item .content {top:10%; left:10px;}
-    .carousel .list .item .content .text-content {max-width: 100%;}
+    header {height:60px; overflow: hidden;}
+    header:has(nav div.m-navigatior.active) {height: 100%; background-color: rgba(0,164,217,1);}
+    header nav a.logo {width: auto; position: absolute; left:10px; top:5px; display: inline-block;}
+    header nav div.m-navigatior {display: inline-block; position: absolute; right: 16px; top:12px; width: auto; font-size:32px;}
+    header nav div.m-navigatior span.close {display: none;}
+    header nav div.m-navigatior.active span.close {display: block;}
+    header nav div.m-navigatior.active span.humberger {display: none;}
+    header nav a {width: 100%; text-align: center; padding:19px 0px; display: none;}
+    header nav div.m-navigatior.active ~ div a {display: block; position: relative; border-radius: 0px;border-bottom: solid 1px #0089b6;}
+    header nav div a:hover,header nav div a:active {border: none; background-color: transparent;}
+    .carousel {width: calc(100vw - 0px);}
+    .carousel .list .item .content {top:20%; left: 50%; transform: translateX(-50%);}
+    .carousel .list .item .content .text-content {max-width:80%;}
     .carousel .list .item .content .title, .carousel .list .item .content .topic {font-size: 1rem;}
     .thumbnail .item {width: 14%; height: 80px;}
-    .thumbnail {left: 4%; gap:5px;}
+    .thumbnail {left:0%; gap:5px;  display: flex; justify-content: center;}
+    @keyframes showThumbnail {
+    to {width:14%;}
+   }
+    .carousel.next .list .item:nth-child(1) img {width: 14%; height: 80px;}
+    .carousel.next .thumbnail {transform: translateX(14%);}
     section.about {flex-direction: column; height: auto;}
     section.about aside {width: 88%;}
     section.about aside:first-child {height:225px;}
     section.about aside.left span.img-1 {top:22px; left:60px;}
     section.about aside.left span.img-2 {top:50px; left:180px;}
     section.about aside.left span.img-1 img, section.about aside.left span.img-2 img {width: 150px; height: 200px;}
-
+    section.packages .container {width: 95%;}
+    section.packages .slider-wrapper-container {flex-direction: column;}
+    section.packages .slider-wrapper:first-child {border: none;}
+    section.packages .slider-wrapper:last-child {padding-left: 0;}
+    section.packages .slider-wrapper {width: 100%; padding:0;}
+    section.contact .left {width: 100%;}
+    section.contact .right {width: 100%; margin-top: 50px;}
 }
