--- a/style.css
+++ b/style.css
@@ -138,28 +138,31 @@ section.contact .right .social-icon i:hover {color: #00a4d9; cursor: pointer;}
 
 /* Responsive CSS */
 
-@media(max-width:780px) {
+@media(max-width:1024px) {
     header {height:60px; overflow: hidden;}
     header:has(nav div.m-navigatior.active) {height: 100%; background-color: rgba(0,164,217,1);}
     header nav a.logo {width: auto; position: absolute; left:10px; top:5px; display: inline-block;}
-    header nav div.m-navigatior {display: inline-block; position: absolute; right: 16px; top:12px; width: auto; font-size:32px;}
+    header nav div.m-navigatior {display: inline-block; position: absolute; right:0px; top:0px; padding:12px 16px; background-color: transparent; width: auto; font-size:32px; z-index:99;}
     header nav div.m-navigatior span.close {display: none;}
+    header nav div.m-navigatior.active {background-color: #00a4d9;}
     header nav div.m-navigatior.active span.close {display: block;}
     header nav div.m-navigatior.active span.humberger {display: none;}
     header nav a {width: 100%; text-align: center; padding:19px 0px; display: none;}
+    header nav div.m-navigatior.active ~ div {height: 100vh; overflow-y:auto ;}
     header nav div.m-navigatior.active ~ div a {display: block; position: relative; border-radius: 0px;border-bottom: solid 1px #0089b6;}
+    header nav div.m-navigatior.active ~ div a.logo {border-bottom: none;}
     header nav div a:hover,header nav div a:active {border: none; background-color: transparent;}
     .carousel {width: calc(100vw - 0px);}
-    .carousel .list .item .content {top:20%; left: 50%; transform: translateX(-50%);}
-    .carousel .list .item .content .text-content {max-width:80%;}
+    .carousel .list .item .content {top:20%; left:47%; transform: translateX(-50%); width: calc(100% - 154px); text-align: center;}
+    .carousel .list .item .content .text-content {max-width:100%; padding:32px 16px;}
     .carousel .list .item .content .title, .carousel .list .item .content .topic {font-size: 1rem;}
-    .thumbnail .item {width: 14%; height: 80px;}
-    .thumbnail {left:0%; gap:5px;  display: flex; justify-content: center;}
+    .thumbnail {width: 100%; left:0%; gap:5px;  display: flex; justify-content: center;}
+    .thumbnail .item {width:22%; height: 80px;}
     @keyframes showThumbnail {
-    to {width:14%;}
+    to {width:22%;}
    }
-    .carousel.next .list .item:nth-child(1) img {width: 14%; height: 80px;}
-    .carousel.next .thumbnail {transform: translateX(14%);}
+    .carousel.next .list .item:nth-child(1) img {width:22%; height: 80px;}
+    .carousel.next .thumbnail {transform: translateX(22%);}
     section.about {flex-direction: column; height: auto;}
     section.about aside {width: 88%;}
     section.about aside:first-child {height:225px;}
@@ -173,4 +176,7 @@ section.contact .right .social-icon i:hover {color: #00a4d9; cursor: pointer;}
     section.packages .slider-wrapper {width: 100%; padding:0;}
     section.contact .left {width: 100%;}
     section.contact .right {width: 100%; margin-top: 50px;}
+    section.packages .slider-wrapper .image-list {justify-content: center;}
+    .carousel .list .item .content .buttons {justify-content: center;}
+    section.contact .right .input-container {max-width: 332px;}
 }
