--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ section {width: 100%; height: 100vh;}
 .thumbnail .item .content {position:absolute; bottom: 10px; left: 10px; right: 10px;}
 .thumbnail .item .content .title {font-weight: bold;}
 .arrows {position:absolute; top:0; left: 0; width:100%; height:100vh; display: flex; align-items: center;}
-.arrows button {width:50px; height:50px; background-color: rgba(56, 56, 56, 0.5); border: none; font-family: Arial, Helvetica, sans-serif; color: #fff; font-weight: bold; font-size: large; transition: .5s; z-index:100; border-radius:4px;}
+.arrows button {width:50px; height:50px; background-color: rgba(56, 56, 56, 0.7); border: none; font-family: Arial, Helvetica, sans-serif; color: #fff; font-weight: bold; font-size: large; transition: .5s; z-index:100; border-radius:4px;}
 .arrows button#next {right:10px; position:absolute;}
 .arrows button#prev {left:10px; position:absolute;}
 .arrows button:hover {background-color:#00a4d9; color: #fff; cursor: pointer;}
@@ -132,6 +132,8 @@ section.contact .right .input-container .send-icon i {font-size: 20px;}
 section.contact .right .social-icon i {font-size:36px; margin-right: 16px; transition: 0.5s;}
 section.contact .right .social-icon i:hover {color: #00a4d9; cursor: pointer;}
 
+.reveal {position:relative; transform: translateY(150px); opacity: 0; transition: all 1s ease;}
+.reveal.active {transform: translateY(0px); opacity:1; background:none; padding-top:0px;}
 
 
 
@@ -179,4 +181,8 @@ section.contact .right .social-icon i:hover {color: #00a4d9; cursor: pointer;}
     section.packages .slider-wrapper .image-list {justify-content: center;}
     .carousel .list .item .content .buttons {justify-content: center;}
     section.contact .right .input-container {max-width: 332px;}
+    section.packages .slider-wrapper .image-list .image-item {width: 120px; height: 100px;}
+    .arrows {justify-content: center;}
+    .arrows button#next {right: auto; bottom: 20%; margin-left: 70px;}
+    .arrows button#prev {left: auto; bottom: 20%; margin-right: 70px;}
 }
