--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
+html {scroll-behavior: smooth;}
 * {padding:0px; margin:0px; outline:0px;}
 body {font-family: "Roboto", sans-serif; background-color: #000; color: #eee; margin: 0; font-size: 12px;}
 a {text-decoration: none; color: #eee;} .bold {font-weight: 600;}
 header {width:100%; margin: auto; height:60px; display: flex; align-items: center; justify-content: center; position: fixed; top:0; z-index:999; background-color:rgba(0,164,217,.9);}
 header nav {height: 100%;}
 header nav a.logo {padding:0px; position:fixed; left:20px; top:5px;}
+header nav a.logo:hover {border:none;}
 header nav a {font-size: 14px; padding:19px 16px; text-transform: uppercase; float: left; border-right: 3px solid transparent; border-bottom: 4px solid transparent; border-radius: 0px 50px;}
 header nav a:hover {background: #00a4d9; color: #f1683a; color: #fff; border-right: solid 3px #fff; border-bottom: solid 4px #fff; border-radius: 0px 50px; transition: 0.5s linear;}
 header nav div.m-navigatior {display: none;}
@@ -18,13 +20,13 @@ section {width: 100%; height: 100vh;}
 .carousel .list .item .content .topic {color: #f1683a; color: #fff;}
 .carousel .list .item .content .des {font-size: 16px; display: block; margin-top: 8px; line-height: 24px;}
 .carousel .list .item .content .buttons {display: grid; grid-template-columns: repeat(2, 130px); grid-template-rows: 40px; gap: 5px; margin-top: 20px;}
-.carousel .list .item .content .buttons button {border: none; background-color: #1a73e8; color: #fff; letter-spacing: 3px; font-family: Arial, Helvetica, sans-serif; font-weight: 600;}
+.carousel .list .item .content .buttons button {border: none; background-color:#00a4d9; color: #fff; letter-spacing: 3px; font-family: Arial, Helvetica, sans-serif; font-weight: 600;}
 .carousel .list .item .content .buttons button:nth-child(2) {background-color: transparent; color: #eee; border:1px solid #eee;}
 
 .thumbnail {position:absolute; bottom: 50px; left: 50%; width: max-content; z-index: 100; display: flex; gap: 20px;}
 .thumbnail .item {width: 150px; height:150px; flex-shrink: 0; position:relative; border:solid 2px #fff; border-radius: 22px;}
 .thumbnail .item img {width: 100%; height: 100%; object-fit: cover; border-radius: 20px;}
-.thumbnail .item .content {position:absolute; bottom: 10px; left: 10px; right: 10px;}
+.thumbnail .item .content {position:absolute; bottom:0px; left:0px; right:0px; padding:8px 5px; text-align: center; border-radius: 0px 0px 25px 25px; background-color: rgba(0,0,0,0.5);}
 .thumbnail .item .content .title {font-weight: bold;}
 .arrows {position:absolute; top:0; left: 0; width:100%; height:100vh; display: flex; align-items: center;}
 .arrows button {width:50px; height:50px; background-color: rgba(56, 56, 56, 0.7); border: none; font-family: Arial, Helvetica, sans-serif; color: #fff; font-weight: bold; font-size: large; transition: .5s; z-index:100; border-radius:4px;}
@@ -93,9 +95,9 @@ section {width: 100%; height: 100vh;}
 
 section.about {background: #fff; display: flex; align-items: center; justify-content: center; height:100vh;}
 section.about aside {width: 40%; padding: 24px; float: left; position:relative;}
-section.about aside.left span.img-1 {position:absolute; top:-170px; left:10px;}
+section.about aside.left span.img-1 {position:absolute; top:0px; left:80px;}
 section.about aside.left span.img-1 img,section.about aside.left span.img-2 img {width:300px; height:350px;}
-section.about aside.left span.img-2 {position:absolute; top:-110px; left:215px;}
+section.about aside.left span.img-2 {position:absolute; top:70px; left:260px;}
 section.about aside.right h2 {text-transform: uppercase; color:#00a4d9; font-size: 24px;}
 section.about aside.right p.about-text {color:#1d1d1d; font-size:14px; line-height: 20px; margin-top: 16px;}
 button.btn {background-color:#00a4d9; color:#fff; padding:12px 16px; opacity: 0.8; transition: 0.5s; cursor: pointer; display:inline-block; border:none; border-radius: 4px;}
@@ -112,10 +114,14 @@ section.packages .slider-wrapper h3 {text-transform: uppercase; color: #00a4d9;f
 section.packages .slider-wrapper .image-list {display: grid; gap:0px;  overflow-x: auto; margin-bottom:10px; grid-template-columns: repeat(3, 0fr);}
 section.packages .slider-wrapper .image-list .image-item {width:165px; height:150px; border: solid 4px #fff; border-radius:15px; object-fit:cover; transition: 0.5s;}
 section.packages .slider-wrapper .image-list .image-item:hover {transform:scale(1.05);}
-section.packages .heading-text h2 {text-transform: uppercase; color: #00a4d9; font-size:24px; text-align: center; padding: 16px 0px 32px 0px;}
+section.packages .heading-text h2 {text-transform: uppercase; color: #00a4d9; font-size:24px; text-align: center; padding:32px 0px 32px 0px;}
 section.packages .button-container {display: flex; justify-content: center; margin-bottom: 16px;}
 
-section.contact {display: flex; justify-content: center; align-items: center; background-color: #f0f8fb; position:relative; height: auto; padding:50px 0; background-image: url(img/3.jpg); background-size: cover; background-attachment: fixed;}
+section.clients {background-color: #fff; width: 100%; display: flex; justify-content: center; padding: 32px 0px;}
+section.clients .container {width:80%; position: relative; padding: 0px;}
+section.clients .container h2 {text-transform: uppercase; color: #00a4d9;font-size: 24px;text-align: center;padding: 32px 0px 32px 0px;}
+
+section.contact {display: flex; justify-content: center; align-items: center; background-color: #f0f8fb; position:relative; height: auto; padding:50px 0px 25px 0px; background-image: url(img/3.jpg); background-size: cover; background-attachment: fixed;}
 section.contact::after {content:''; position: absolute; top: 0; left: 0; height: 100%; width: 100%; background-color: rgba(0,0,0,0.7);}
 section.contact .container {width:80%; position: relative; z-index:9;}
 section.contact .heading-text h2 {text-transform: uppercase; color: #fff;font-size:24px; text-align: center; margin-bottom:60px;}
@@ -131,10 +137,12 @@ section.contact .right .input-container .send-icon:hover {opacity: 1; cursor: po
 section.contact .right .input-container .send-icon i {font-size: 20px;}
 section.contact .right .social-icon i {font-size:36px; margin-right: 16px; transition: 0.5s;}
 section.contact .right .social-icon i:hover {color: #00a4d9; cursor: pointer;}
-
+section.contact .copyright {margin-top:60px; width: 100%; display: flex; justify-content: center;}
+section.contact .copyright span.copyright-text {color: #fff; font-size: 12px;}
 .reveal {position:relative; transform: translateY(150px); opacity: 0; transition: all 1s ease;}
 .reveal.active {transform: translateY(0px); opacity:1; background:none; padding-top:0px;}
-
+#myBtn {display:none; position:fixed; bottom:20px; right:30px; z-index:99; font-size:16px; font-weight: 600; transition: 0.5s; border:none; outline:none; background-color:rgba(0,0,0,0.3); border: solid 2px #fff; color:white; cursor:pointer; padding:8px 12px; border-radius:4px;}
+#myBtn:hover {background-color:#00a4d9;}
 
 
 
@@ -143,7 +151,7 @@ section.contact .right .social-icon i:hover {color: #00a4d9; cursor: pointer;}
 @media(max-width:1024px) {
     header {height:60px; overflow: hidden;}
     header:has(nav div.m-navigatior.active) {height: 100%; background-color: rgba(0,164,217,1);}
-    header nav a.logo {width: auto; position: absolute; left:10px; top:5px; display: inline-block;}
+    header nav a.logo {width: auto; position: absolute; left:10px; top:5px; display: inline-block; border: none;}
     header nav div.m-navigatior {display: inline-block; position: absolute; right:0px; top:0px; padding:12px 16px; background-color: transparent; width: auto; font-size:32px; z-index:99;}
     header nav div.m-navigatior span.close {display: none;}
     header nav div.m-navigatior.active {background-color: #00a4d9;}
@@ -155,15 +163,15 @@ section.contact .right .social-icon i:hover {color: #00a4d9; cursor: pointer;}
     header nav div.m-navigatior.active ~ div a.logo {border-bottom: none;}
     header nav div a:hover,header nav div a:active {border: none; background-color: transparent;}
     .carousel {width: calc(100vw - 0px);}
-    .carousel .list .item .content {top:20%; left:47%; transform: translateX(-50%); width: calc(100% - 154px); text-align: center;}
+    .carousel .list .item .content {top:20%; left:46%; transform: translateX(-50%); width: calc(100% - 100px); text-align: center;}
     .carousel .list .item .content .text-content {max-width:100%; padding:32px 16px;}
     .carousel .list .item .content .title, .carousel .list .item .content .topic {font-size: 1rem;}
+    .carousel .list .item .content .buttons {justify-content: center;}
     .thumbnail {width: 100%; left:0%; gap:5px;  display: flex; justify-content: center;}
     .thumbnail .item {width:22%; height: 80px;}
-    @keyframes showThumbnail {
-    to {width:22%;}
-   }
-    .carousel.next .list .item:nth-child(1) img {width:22%; height: 80px;}
+    @keyframes showThumbnail {to {width:22%;}}
+    @keyframes outImage {to{width:22%; height:80px; left:27%; border-radius: 20px; bottom:50px;}}
+    .carousel.next .list .item:nth-child(1) img {width:22%; height: 80px; left: 27%; bottom: 50px;}
     .carousel.next .thumbnail {transform: translateX(22%);}
     section.about {flex-direction: column; height: auto;}
     section.about aside {width: 88%;}
@@ -179,7 +187,6 @@ section.contact .right .social-icon i:hover {color: #00a4d9; cursor: pointer;}
     section.contact .left {width: 100%;}
     section.contact .right {width: 100%; margin-top: 50px;}
     section.packages .slider-wrapper .image-list {justify-content: center;}
-    .carousel .list .item .content .buttons {justify-content: center;}
     section.contact .right .input-container {max-width: 332px;}
     section.packages .slider-wrapper .image-list .image-item {width: 120px; height: 100px;}
     .arrows {justify-content: center;}
